# Sebastian

./: .gitignore  .release-please-manifest.json  IMPLEMENTATION.md  MILESTONE.md  Makefile  README.md  ROADMAP.amendments.md  ROADMAP.md  TESTING.md  blog-1-aec-full-duplex.md  blog-2-arquitectura-esp32-zig-livekit.md  blog-3-desarrollo-con-ia-y-telemetria.md  livekit-community-post.md  pyrightconfig.json  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  livekit.yaml  promtail.yml
.github/workflows/: dashboard-ci.yml  dashboard-publish.yml  docker-publish.yml  firmware-tests.yml  helm-publish.yml  lint.yml  pages.yml  release-please.yml  server-ci.yml  server-publish.yml
agent/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  agent.py  audio_input.py  control_plane.py  docker-entrypoint.sh  endpointing.py  instrumentation.py  phantom.py  preroll.py  pyproject.toml  record.py  tasks.py  telemetry.py  text_match.py  token_server.py  wake_verify.py
agent/tests/: test_phantom.py  test_preroll.py  test_text_match.py
dashboard/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: routeTree.gen.ts  styles.css
dashboard/src/lib/: api-schema.ts  api.ts  format.test.ts  format.ts
dashboard/src/routes/: __root.tsx  index.tsx  recordings.$recordingId.tsx
docs/: AEC.md  ARCHITECTURE.md  BUILD_AND_RUN.md  DEVCONTAINER.md  FIRMWARE.md  HARDWARE.md  MIC_CHANNEL_TUNING.md  STATUS.md  TROUBLESHOOTING.md  WAKE_WORD.md  XVF3800.md  xvf3800_command_map.txt
docs/implementation/: 01-fw-wakeword-spike.md  02-fw-gate-preroll-protocol.md  03-wakeword-training.md  04-agent-modernization.md  05-aec-verification.md  06-model-cost-matrix.md  07-ddsd-speaker-id.md  08-infra-selfhost.md  09-cross-check.md  10-aec-fullduplex-plan.md
docs/installer/: PROVISIONING.md  index.html  sebastian-config.schema.json
docs/installer/assets/: esp32-DlivVhIs-yZURWub6.js  esp32c2-CzvrfIFN-2oTyryPy.js  esp32c3-f8fwIr7_-XxSprBvk.js  esp32c5-D10lI8kj-DE14vdg_.js  esp32c6-CEDebHbz-CI922xxT.js  esp32c61-BCSbE5wE-BgvCVt6G.js  esp32h2-CakTbIIf-BC5yWYZz.js  esp32p4-DD6i9EGh-DykoXC9H.js  esp32s2-Bl3uMkxu-BfjjNc2i.js  esp32s3-vxLttl29-Dn3XEpc8.js  esp8266-Dk4lBEaC-oA85B01T.js  index-CHrxHk0w.css  index-CTCfNEUz.css  index-DsKb0eqL.js  index-Dt9w-IG1-chKIUGPq.js  index-H8bqjyG-.js  install-dialog-C5LjR_e6-BSKV65sn.js  install-dialog-C5LjR_e6-yezTkS4q.js  styles-sT2V1cOw-DxJXOYze.js
firmware/: CMakeLists.txt  build.zig  core_test.zig  sdkconfig.defaults
firmware/cmake/: zig.cmake
firmware/components/mww/: CMakeLists.txt  idf_component.yml  mww.cpp  mww.h
firmware/components/mww/microfrontend/: frontend.h  frontend_util.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  abi_check.c  app.zig  board.zig  config.zig  csdk.zig  idf_component.yml  log.zig  mic_src.zig  placeholder.c  pre_roll.zig  provisioning.c  sebastian.tflite  syslog_sink.c  syslog_sink.h  token.zig  token_http.c  token_http.h  wakeword.zig  xvf_aec.zig  xvf_dfu.zig  xvf_pcm.zig  xvf_ui.zig
firmware/main/core/: aec_core.zig  decimator.zig  mic_gate.zig  pre_roll_core.zig  session_core.zig  session_reducer.zig  token_core.zig
helm/sebastian/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
server/: CHANGELOG.md  Dockerfile  Makefile  README.md  atlas.hcl  go.mod  go.sum
server/api/: openapi.yaml
server/db/: schema.sql
tools/: devtools.sh  export_current_config.py  flash.sh  idf.sh  prepare_web_installer.sh  provision_device.py  zig.sh
tools/telemetry/: README.md  bridge.py  dashboard.json  provision.sh
wakeword/: README.md  download_es_voices.py  sebastian.json  split_wakeword.py
web-installer/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
web-installer/public/: PROVISIONING.md  README.md  manifest.json  sebastian-config.schema.json
web-installer/src/: App.tsx  global.d.ts  index.css  main.tsx
(+67 files in other folders)
