[project]
name = "sebastian-agent"
version = "0.1.0"
description = "LiveKit voice agent for the Sebastian ESP32-S3 speaker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[google,mcp,openai]~=1.6",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.0,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "aiohttp>=3.9,<4",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
