[project]
name = "sebastian-agent"
version = "0.1.7"
description = "LiveKit voice agent for the Sebastian ESP32-S3 speaker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[google,mcp,openai]~=1.6",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.0,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "aiohttp>=3.9,<4",
    "livekit-plugins-silero~=1.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "mypy>=2.1.0",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# LiveKit's event decorators (@room.on, @function_tool, session.on) are untyped
# third-party APIs, so don't flag every handler they wrap.
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Third-party packages without type stubs.
module = [
    "livekit.*",
    "aiohttp",
    "dotenv",
    "openai.*",
    "opentelemetry.*",
    "telemetry",
    "text_match",
    "preroll",
]
ignore_missing_imports = true
